--- a/src/components/Bins/Bins.css
+++ b/src/components/Bins/Bins.css
@@ -1,15 +1,15 @@
 
 .individual-bin{
     background-color: #ed6b5a ;
-    color: black;
-    width: 500px;
-    height: 60px;
+    color: white;
+    width: 865px;
+    height: 95px;
     margin-bottom: 20px;
-    border-radius: 3px;
+    border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .add-to-bin-button {
