september 20th 12:00pm fixed some css for bin and create bin

--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -5,11 +5,11 @@
     display: flex;
 }
 
-.white {
+/* .white {
     width: 10%;
     min-width: 120px;
     height: 100%;
-}
+} */
 
 .content {
     width: 90%;
