--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -17,7 +17,7 @@
   }
 
   .logo-pic {
-    width: 65px;
+    width: 75px;
     position: relative;
     top: 13px;
     margin-right: 10px;
@@ -57,6 +57,17 @@
     justify-content: center;
     cursor: pointer;
   }
+  
+  .logo-box-shelf{
+    background-color: #ab2a19;
+    display: flex;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    justify-content: center;
+    cursor: pointer;
+  }
+
 
   .shelf-title-box {
     display: flex;
@@ -124,6 +135,7 @@
     margin-top: 10px;
     margin-right:250px;
   }
+
   
   a {
     text-decoration: none;
